# AncientChess

./: .gitmodules  CMakeLists.txt  README.md  chess.cpp  chess.h  chess.nsi  chess_tests.cpp  engine.cpp  fics.h  iphone-Entitlements.plist  iphone-Info.plist  mac-Info.plist  magic.h  magicgen.cpp  pst.h
OldChess-ios/: Entitlements.plist  Info.plist
OldChess-mac/: Info.plist
OldChess-windows/: chess.rc
assets/: icon.icns
chess-android/: AndroidManifest.xml
chess-android/jni/: Android.mk
chess-android/res/values/: strings.xml
chess-iphone/Resources/: LaunchScreen.xib
imports/: CMakeLists.txt
