# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

set(LFL_PNG 1)
set(LFL_GLES2 1)
set(LFL_LFLINPUT 1)
set(LFL_LFLVIDEO 1)

if(NOT WIN32 AND NOT LFL_ANDROID)
  set(LFL_ICONV 1)
endif()
if(LFL_ANDROID)
elseif(LFL_IPHONE)
else()
  set(LFL_GLEW 1)
  set(LFL_PORTAUDIO 1)
  if(NOT WIN32)
    set(LFL_GLOG 1)
  endif()
endif()

lfl_project(chess)
add_subdirectory(../core/lfapp ${CMAKE_CURRENT_BINARY_DIR}/${LFL_PROJECT}_lfapp_obj)
lfapp_add_target(chess chess.cpp)
target_compile_definitions(chess PUBLIC ${LFAPP_DEF})
target_include_directories(chess PUBLIC ${LFAPP_INCLUDE})
lfapp_post_build_start(chess chess LChess)

add_executable(chess_tests chess_tests.cpp)
target_include_directories(chess_tests PUBLIC ${GTEST_INCLUDE})
target_link_libraries(chess_tests ${LFAPP_LIB} ${GTEST_LIB})
